# Eloquent

./: .bzrignore  .gitignore  Eloquent-AppStore-Info.plist  Eloquent-Bridging-Header.h  Eloquent_Appcast.xml  Eloquent_Prefix.pch  Info.plist  README.md  SessionManagerTest.h  SessionManagerTest.m  buildnumber  deployTarget.sh  exportXibToStrings.sh  getBundleVersion.pl  getLastSVNCommit.pl  get_bundle_version.rb  get_svn_revision.rb  increment_buildnumber.rb  write_buildnumber.rb  write_svnrev.rb
Base.lproj/: About.xib  BibleCombiView.xib  BibleView.xib  CommentaryView.xib  ConfirmationDialog.xib  DailyDevotion.xib  DictionaryView.xib  ExtTextView.xib  GenBookView.xib  LeftSideBarView.xib  ModuleListUI.xib  PrintAccessory.xib  SearchBookSetEditor.xib  WindowHostToolbar.xib
Eloquent.xcodeproj/: project.pbxproj
English.lproj/: About.xib  BibleCombiView.xib  BibleSearchOptions.xib  BibleView.xib  BookmarkManagerUI.xib  BookmarkOutlineView.xib  CommentaryView.xib  ConfirmationDialog.xib  Credits.rtf  (+26 more)
Resources/ObjCSword.framework/Versions/A/Resources/locales.d/: Makefile.am  ar-utf8.conf  ar_EG-utf8.conf  az-utf8.conf  be-utf8.conf  de-utf8.conf  et_abbr.conf  fo-utf8.conf  fr-utf8.conf  fr.conf  fr_abbrev-utf8.conf  fr_abbrev.conf  hr-utf8.conf  iu-utf8.conf  ja-utf8.conf  kpg-utf8.conf  locales.conf  lt-utf8.conf  lv-utf8.conf  nl-utf8.conf  no-utf8.conf  pl.conf  pon_utf8.conf  pt-utf8.conf  pt_BR.conf  ro-utf8.conf  ro.conf  ru-utf8.conf  ru_RU-koi8-r.conf  ru_RU-utf8.conf  sk-utf8.conf  sl-utf8.conf  tr-utf8.conf  uk-utf8.conf  uk_UA-cp1251.conf  zh_CN-utf8.conf
(+712 files in other folders)
